// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0"
  >
    <div
      className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Schnauzer"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Aussie"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a visually hidden legend 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Schnauzer"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Aussie"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders with errorMessage 1`] = `
<fieldset
  className="unstyled p0 m0"
>
  <legend
    className="label formLabel paddingX0 visuallyHidden"
  >
    <div
      className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
    >
      What is your favorite dog?
    </div>
  </legend>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Schnauzer"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Schnauzer"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Schnauzer"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Schnauzer
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <div
      className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
    >
      <label
        className="label"
        htmlFor="Aussie"
      >
        <div
          className="box paddingX1 relative"
        >
          <input
            checked={false}
            className="input sizeMd inputEnabled"
            disabled={false}
            id="Aussie"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
          />
          <div
            className="whiteBg border borderRadiusMd sizeMd check"
          />
        </div>
      </label>
      <div
        className="box xsDisplayBlock"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <label
          className="label"
          htmlFor="Aussie"
        >
          <div
            className="box paddingX1"
          >
            <div
              className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
            >
              Aussie
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize100 errorText alignStart breakWord fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="fieldset-with-error-error"
      >
        At least 1 item must be selected
      </span>
    </div>
  </div>
</fieldset>
`;
